# mcts-demo

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
core/: mcts.py
core/env/: connect4.py
mcts_demo/: mcts.py
mcts_demo/env/: base.py  connect4.py  pendulum.py
notebooks/: connect4.ipynb  mcts.ipynb  pendulum.ipynb
tests/: test_connect4.py  test_mcts.py  test_pendulum.py
