[tool.poetry]
authors = [
  "Lucas Boyer",
]
description = "A simple implementation for the MCTS algorithm."
homepage = "https://github.com/lucasBOYER/mcts-demo"
name = "mcts_demo"
repository = "https://github.com/lucasBOYER/mcts-demo"
version = "0.0.1"

[tool.poetry.dependencies]
jupyterlab = "^3.1.9"
numpy = "^1.21.0"
python = "^3.7"
scipy = "^1.6.1"
gym = "^0.19.0"
pyglet = "^1.5.19"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
pytest-cov = "^2.12.1"
black = {version = "^21.8b0", allow-prereleases = true}
flake8 = "^3.9.2"
